fix(popover-edit): incorrect spacing for form field inside pop… (#17600)
For some reason the padding on `mat-form-field` was reset inside the popover edit overlay which made it looked weird. From what I can tell, there's no reason to do this so these changes remove the override.

--- a/src/material-experimental/popover-edit/_popover-edit.scss
+++ b/src/material-experimental/popover-edit/_popover-edit.scss
@@ -105,8 +105,10 @@
     mat-form-field {
       display: block;
 
+      // Clear the top padding, because we don't have a label on it and the reserved space
+      // can throw off the alignment when there isn't a header (see discussion in #17600).
       &:not(.mat-form-field-has-label) .mat-form-field-infix {
-        padding: 0;
+        padding-top: 0;
       }
     }
   }
